# MR60BHA1-Library

./: CMakeLists.txt  README.md
lib/: MR60BHA1_Defines.hpp  MR60BHA1_Driver.hpp  MR60BHA1_Functions.cpp
tests/: MR60BHA1_checksum_test.cpp  MR60BHA1_frame_test.cpp  MR60BHA1_test.cpp
